# Tarnished

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: datagen.cpp  datagen.h  eval.cpp  eval.h  main.cpp  nnue.cpp  nnue.h  parameters.h  search.cpp  search.h  searcher.h  timeman.h  tt.h  uci.h  util.cpp  util.h
